[tool.poetry]
name = "landbank-viz"
version = "0.1.0"
description = "Cuyahoga County Landbank Propery Visualization"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thechrislee/landbank-viz"
repository = "https://github.com/thechrislee/landbank-viz"
keywords = ["landbank-viz", "cleveland"]
authors = ["Chris Lee <chris@noreply.github.com>"]

[tool.poetry.scripts]
landbank = "landbank_viz.__main__:cli"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
typer = "^0.6.1"
requests = "^2.28.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
